--- a/HTML/index.html
+++ b/HTML/index.html
@@ -78,7 +78,7 @@
         <!--========== END HEADER ==========-->
 
         <!--========== SLIDER ==========-->
-        <div class="promo-block parallax-window" data-parallax="scroll" data-image-src="img/1920x1080/java.jpg">
+        <div class="promo-block parallax-window" data-parallax="scroll" data-image-src="img/1920x1080/img.jpg">
             <div class="container">
                 <div class="row">
                     <div class="col-sm-6">
